--- a/start/lecture2_6/index.html
+++ b/start/lecture2_6/index.html
@@ -20,6 +20,16 @@
 <body>
   <script>
     //Place your code here
+
+    function createNPC() {
+      const power = Math.random() * 0.5 + 0.5;
+      const weapons = ["sword", "pistol", "axe", "spear"];
+      const weapon = weapons[Math.floor(Math.random() * weapons.length)];
+      const strength = Math.random() * ;
+      const weapon = weapons[Math.floor(Math.random() * weapons.length)];
+
+    }
+
   </script> 
 </body>
 
